templates/namespace.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata: 
  name: "dvwa"
  labels: 
    istio-injection: ""
spec: 
  finalizers: 
    - "kubernetes"
