templates/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata: 
  name: "dvwa"
  labels: 
    app: "dvwa"
spec: 
  selector: 
    matchLabels: 
      app: "dvwa"
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: "dvwa"
    spec: 
      containers: 
        - 
          name: "dvwa"
          image: "citizenstig/dvwa"
          ports: 
            - 
              containerPort: 80
