templates/pod.yaml
---
apiVersion: "v1"
kind: "Pod"
metadata: 
  name: "dvwa"
  labels: 
    name: "dvwa"
spec: 
  containers: 
    - 
      name: "dvwa"
      image: "citizenstig/dvwa"
      ports: 
        - 
          containerPort: 80
