templates/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata: 
  name: "dvwa"
  labels: 
    app: "dvwa"
spec: 
  ports: 
    - 
      port: 8000
      targetPort: 8000
  selector: 
    app: ""
  type: "ClusterIP"
