templates/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata: 
  name: "dvwa"
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - 
      host: ""
      http: 
        paths: 
          - 
            path: "/"
            pathType: "Prefix"
            backend: 
              serviceName: "dvwa"
              servicePort: 80
